Implemented first photo editor

--- a/src/phobo/templates/home.html
+++ b/src/phobo/templates/home.html
@@ -1,6 +1,16 @@
 <div id="app">
   <div class="container">
-    Welcome to PhoBo
+    <div class="row">
+      <h2>Home</h2>
+      <dir class="col-md-2 fw-bold">PhoBo directory:</dir>
+      <dir class="col-10">{{ dir_phobo }}</dir>
+      <dir class="col-md-2 fw-bold">Import directory:</dir>
+      <dir class="col-10">{{ dir_import }}</dir>
+      <dir class="col-md-2 fw-bold">Photos directory:</dir>
+      <dir class="col-10">{{ dir_photos }}</dir>
+      <dir class="col-md-2 fw-bold">Database file:</dir>
+      <dir class="col-10">{{ file_database }}</dir>
+    </dir>
   </div>
 </div>
 
