--- a/src/phobo/templates/index.html
+++ b/src/phobo/templates/index.html
@@ -24,13 +24,13 @@
           <a class="nav-link" href="{{ url_for('setup_page.setup_view') }}">Setup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('preview_photo') }}">Photo</a>
+          <a class="nav-link" href="{{ url_for('photo_page.photo_view') }}">Photo</a>
         </li>
     </ul>
   </div>
 </nav>
 </div>
-<div id="content">
+<div id="content" class="pt-2">
     {% include content_page %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
