added datetime picker

--- a/src/phobo/templates/photo.html
+++ b/src/phobo/templates/photo.html
@@ -1,7 +1,7 @@
 <div id="app">
   <div class="container">
     <div class="row">
-      <h2>List of figures</h2>
+      <h2>List of photos</h2>
       {% for photo in photo_list %}
       <div class="col-md-1">
         <a href="{{ photo.link }}">
