--- a/src/phobo/templates/setup.html
+++ b/src/phobo/templates/setup.html
@@ -20,38 +20,17 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row" class="align-middle">Registered:</th>
+            <th scope="row" class="align-middle">Registered</th>
             <td class="align-middle">[[ registered_photos ]]</td>
-            <td><button class='btn btn-danger btn-sm me-2' v-if="registered_photos" @click="remove_registered()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-  <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-</svg>
-            </button>
-            <button class='btn btn-secondary btn-sm' v-if="registered_photos" @click="show_registered()">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M2 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-.5-.5zM3 3H2v1h1z"/>
-  <path d="M5 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M5.5 7a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 4a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1z"/>
-  <path fill-rule="evenodd" d="M1.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5zM2 7h1v1H2zm0 3.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm1 .5H2v1h1z"/>
-</svg>
-            </button></td>
+            <td><button class='btn btn-danger btn-sm me-2' v-if="registered_photos" @click="remove_registered()"><i class="bi bi-trash"></i></button>
+            <button class='btn btn-secondary btn-sm' v-if="registered_photos" @click="show_registered()"><i class="bi bi-list-ul"></i></button></td>
           </tr>
           <tr>
-            <th scope="row" class="align-middle">Unregistered:</th>
+            <th scope="row" class="align-middle">Unregistered</th>
             <td class="align-middle">[[ unregistered_photos ]]</td>
             <td>
-              <button class='btn btn-secondary btn-sm me-2' v-if="unregistered_photos" @click="add_unregistered()">
-   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-</svg>
-              </button>
-              <button class='btn btn-secondary btn-sm' v-if="unregistered_photos" @click="show_unregistered()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M2 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-.5-.5zM3 3H2v1h1z"/>
-  <path d="M5 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M5.5 7a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 4a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1z"/>
-  <path fill-rule="evenodd" d="M1.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5zM2 7h1v1H2zm0 3.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm1 .5H2v1h1z"/>
-</svg>
-              </button></td>
+              <button class='btn btn-primary btn-sm me-2' v-if="unregistered_photos" @click="add_unregistered()"><i class="bi bi-plus-lg"></i></button>
+              <button class='btn btn-secondary btn-sm' v-if="unregistered_photos" @click="show_unregistered()"><i class="bi bi-list-ul"></i></button></td>
             </td>
           </tr>
         </tbody>
@@ -71,20 +50,11 @@
           <tbody>
             <tr v-for="item in preview_data">
               <td>[[ item.doc_id ]]</td>
-              <td v-if="preview_type=='registered'">[[ item.variant_id.substring(0,8) ]]</td>
+              <td v-if="preview_type=='registered'">[[ item.variant_id ]]</td>
               <td>[[ item.name ]]</td>
               <td>
-              <button class='btn btn-danger btn-sm me-2' v-if="preview_type=='registered'" @click="remove_registered(item.doc_id)">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-  <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-</svg>
-              </button>
-              <button class='btn btn-secondary btn-sm me-2' v-if="preview_type=='unregistered'" @click="add_unregistered(item.doc_id)">
-           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-</svg>
-              </button>
+              <button class='btn btn-danger btn-sm me-2' v-if="preview_type=='registered'" @click="remove_registered(item.doc_id)"><i class="bi bi-trash"></i></button>
+              <button class='btn btn-primary btn-sm me-2' v-if="preview_type=='unregistered'" @click="add_unregistered(item.doc_id)"><i class="bi bi-plus-lg"></i></button>
               </td>
             </tr>
           </tbody>
