--- a/src/phobo/templates/photo_preview.html
+++ b/src/phobo/templates/photo_preview.html
@@ -5,7 +5,9 @@
         <h2>Photo #{{ doc_id }}</h2>
       </div>
       <div class="col-6">
-        <a href="{{ url_overview }}" class="btn btn-secondary float-end">Back to overview</a>
+        <a href="{{ url_overview }}" class="btn btn-secondary float-end"><i class="bi bi-microsoft"></i></a>
+        <a href="" class="btn btn-secondary float-end me-2"><i class="bi bi-arrow-right-square-fill"></i></a>
+        <a href="" class="btn btn-secondary float-end me-2"><i class="bi bi-arrow-left-square-fill"></i></a>
       </div>
     </div>
     <div class="row">
@@ -13,6 +15,10 @@
         <div class="row">
           <div class="col-12">
               <img :src="url_image" alt="thumbnail" class="img-thumbnail">
+          </div>
+          <div class="col-12 pt-2">
+            <button class="btn btn-primary btn-sm me-2"><i class="bi bi-arrow-clockwise"></i></button>
+            <button class="btn btn-primary btn-sm"><i class="bi bi-arrow-counterclockwise"></i></button>
           </div>
           <div class="col-12 pt-2">
             <h4>Available variants</h4>
