--- a/src/phobo/templates/setup.html
+++ b/src/phobo/templates/setup.html
@@ -22,46 +22,44 @@
           <tr>
             <th scope="row" class="align-middle">Registered</th>
             <td class="align-middle">[[ registered_photos ]]</td>
-            <td><button class='btn btn-danger btn-sm me-2' v-if="registered_photos" @click="remove_registered()"><i class="bi bi-trash"></i></button>
-            <button class='btn btn-secondary btn-sm' v-if="registered_photos" @click="show_registered()"><i class="bi bi-list-ul"></i></button></td>
+            <td>
+	      <button class='btn btn-danger btn-sm me-2' v-if="registered_photos" @click="remove_item()"><i class="bi bi-trash"></i></button>
+	    </td>
           </tr>
           <tr>
             <th scope="row" class="align-middle">Unregistered</th>
             <td class="align-middle">[[ unregistered_photos ]]</td>
             <td>
-              <button class='btn btn-primary btn-sm me-2' v-if="unregistered_photos" @click="add_unregistered()"><i class="bi bi-plus-lg"></i></button>
-              <button class='btn btn-secondary btn-sm' v-if="unregistered_photos" @click="show_unregistered()"><i class="bi bi-list-ul"></i></button></td>
+              <button class='btn btn-primary btn-sm me-2' v-if="unregistered_photos" @click="add_item()"><i class="bi bi-plus-lg"></i></button>
             </td>
           </tr>
         </tbody>
         </table>
       </div>
       <div class="col-md-8">
-        <h2>[[ preview_title ]]</h2>
+        <h2>Photo list</h2>
         <table class="table" v-if="preview_data.length">
           <thead>
             <tr>
               <th class="col-sm-1">#</th>
               <th class="col-sm-1">Format</th>
-              <th class="col-sm-2" v-if="preview_type=='registered'">Variant ID</th>
               <th>File name</th>
-              <th></th>
+              <th class="col-sm-2"></th>
             </tr>
           </thead>
           <tbody>
             <tr v-for="item in preview_data">
-              <td>[[ item.doc_id ]]</td>
+              <td>[[ item.item_id ]]</td>
               <td>[[ item.format ]]</td>
-              <td v-if="preview_type=='registered'">[[ item.variant_id ]]</td>
               <td>
                 <span class="d-inline-block text-truncate align-middle" style="max-width: 400px;" :title="item.name">
 		  <a :href="item.url_image">[[ item.name ]]</a>
 		</span>
 	      </td>
               <td>
-              <button class='btn btn-danger btn-sm me-2' v-if="preview_type=='registered'" @click="remove_registered(item.doc_id)"><i class="bi bi-trash"></i></button>
-              <a :href="item.url_photo" class='btn btn-secondary btn-sm me-2' v-if="preview_type=='registered'"><i class="bi bi-pencil-square"></i></a>
-              <button class='btn btn-primary btn-sm me-2' v-if="preview_type=='unregistered'" @click="add_unregistered(item.doc_id)"><i class="bi bi-plus-lg"></i></button>
+              <button class='btn btn-primary btn-sm me-2' v-if="!item.registered" @click="add_item(item.item_id)"><i class="bi bi-plus-lg"></i></button>
+              <button class='btn btn-danger btn-sm me-2' v-if="item.registered" @click="remove_item(item.variant_id)"><i class="bi bi-trash"></i></button>
+              <a :href="item.url_photo" class='btn btn-secondary btn-sm me-2' v-if="item.registered"><i class="bi bi-pencil-square"></i></a>
               </td>
             </tr>
           </tbody>
@@ -71,69 +69,55 @@
 </div>
 
 <script>
-const { createApp, ref } = Vue
+  const { createApp, ref, onMounted } = Vue
 const app = createApp({
   setup() {
       const registered_photos = ref({{ counts['registered'] }})
       const unregistered_photos = ref({{ counts['unregistered'] }})
-      const preview_url = ref('')
+      const preview_url = ref("{{ url_for('setup_page.show_files') }}")
       const preview_title = ref('')
       const preview_data = ref([])
-      const preview_type = ref('')
+      onMounted(async () => {
+      await fetch(preview_url.value)
+        .then((response) => response.json())
+        .then((result) => (
+            preview_data.value = result.data
+	)); 
+      });
       function action(url, doc_id=null) {
         axios.get(url, {params: {doc_id: doc_id}})
         .then(function (response) {
           registered_photos.value = response.data.registered
           unregistered_photos.value = response.data.unregistered
-          if (doc_id) {
-            preview(preview_title.value, preview_url.value)
-          } else {
-            preview_url.value = ''
-            preview_title.value = ''
-            preview_data.value = []
-            preview_type.value = ''
-          }
+          preview()
         })
         .catch(function (error) {
           alert('API call error: '+ error)
         })
       }
-      function remove_registered(doc_id=null) {
-        action("{{ url_for('setup_page.remove_registered') }}", doc_id)
+      function remove_item(variant_id=null) {
+        action("{{ url_for('setup_page.remove_item') }}", variant_id)
       }
-      function add_unregistered(doc_id=null) {
-        action("{{ url_for('setup_page.add_unregistered') }}", doc_id)
+      function add_item(item_id=null) {
+        action("{{ url_for('setup_page.add_item') }}", item_id)
       }
       function refresh_counts() {
         action("{{ url_for('setup_page.get_counts') }}")
-        if (preview_url.value) {
-          preview(preview_title.value, preview_url.value)
-        }
       }
-      function preview(title, url) {
-        axios.get(url)
+      function preview() {
+        axios.get(preview_url.value)
         .then(function (response) {
-          preview_url.value = url
-          preview_title.value = title
           preview_data.value = response.data.data
-          preview_type.value = response.data.type
         })
         .catch(function (error) {
           alert('API call error: '+error)
         })
       }
-      function show_registered() {
-        preview('Registered photos', "{{ url_for('setup_page.show_registered') }}")
-      }
-      function show_unregistered() {
-        preview('Unregistered photos', "{{ url_for('setup_page.show_unregistered') }}")
-      }
       return {
         registered_photos, unregistered_photos, 
-        remove_registered, 
-        add_unregistered, refresh_counts,
-        show_registered, show_unregistered,
-        preview_title, preview_data, preview_type
+        remove_item, 
+        add_item, refresh_counts,
+        preview_title, preview_data
       }
   }
 })
