added variant management

--- a/src/phobo/templates/photo_variants.html
+++ b/src/phobo/templates/photo_variants.html
@@ -1,10 +1,10 @@
-<div class="row">
+<div class="row gx-2 gy-2">
   <div class="col-12 pt-2">
     <div class="row">
       <div class="col-6"><h4>Available variants</h4></div>
       <div class="col-6">
 	<a class="btn btn-secondary btn-sm float-end" href="{{ url_photo_comparison }}">
-	  Get variants <i class="bi bi-images"></i>
+	  Compare &nbsp; <i class="bi bi-plus-slash-minus"></i>
 	</a>
       </div>
     </div>
