--- a/src/phobo/templates/index.html
+++ b/src/phobo/templates/index.html
@@ -22,10 +22,10 @@
           <a class="nav-link" href="{{ url_for('index') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('setup_page.setup_view') }}">Setup</a>
+          <a class="nav-link" href="{{ url_for('SetupRouter.setup_view') }}">Setup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('photo_page.photo_view') }}">Photo</a>
+          <a class="nav-link" href="{{ url_for('PhotoRouter.photo_view') }}">Photo</a>
         </li>
     </ul>
   </div>
