--- a/src/phobo/templates/comparison_left.html
+++ b/src/phobo/templates/comparison_left.html
@@ -1,12 +1,44 @@
-<div class="row" id="photo_variant">
+<div class="row" id="photo_variant gy-2 gx-2">
   <div class="col-12">
     <img v-bind:src="url_image" alt="thumbnail" class="img-thumbnail">
   </div>
-  <div class="col-1">
-    <span class="badge text-bg-secondary">ORB: [[ orb_threshold ]]</span>
+  <div class="col-12">
+    <h3>Filters</h3>
   </div>
-  <div class="col-8">
-    <label for="input_orb_threshold" class="form-label">Orb trheshold</label>
-    <input type="text" class="form-text" v-model="orb_threshold" id="input_orb_threshold">
+  <div class="col-4">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" name="mse_threshold" id="mse_threshold" v-model="mse.checked">
+      <label class="form-check-label" for="mse_threshold">
+	MSE: [[ mse.threshold ]]
+      </label>
+    </div> 
+  </div>
+  <div class="col-7">
+    <input type="range"  min="0" max="5000" step="100" v-model="mse.threshold" class="form-range" id="input_mse_threshold" :disabled="!mse.checked">
+  </div>
+  <div class="col-4">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" name="ssim_threshold" id="ssim_threshold" v-model="ssim.checked">
+      <label class="form-check-label" for="ssim_threshold">
+	SSIM: [[ ssim.threshold ]]
+      </label>
+    </div> 
+  </div>
+  <div class="col-7">
+    <input type="range"  min="0" max="1" step="0.01" v-model="ssim.threshold" class="form-range" id="input_ssim_threshold" :disabled="!ssim.checked">
+  </div>
+  <div class="col-4">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" name="orb_threshold" id="orb_threshold" v-model="orb.checked">
+      <label class="form-check-label" for="orb_threshold">
+	ORB: [[ orb.threshold ]]
+      </label>
+    </div> 
+  </div>
+  <div class="col-7">
+    <input type="range"  min="0" max="1" step="0.01" v-model="orb.threshold" class="form-range" id="input_orb_threshold" :disabled="!orb.checked">
+  </div>
+  <div class="col-12">
+    <button type="button" class="btn btn-primary" @click="set_filter()">Apply</button>
   </div>
 </div>
